Fix overflowing large numbers

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -151,4 +151,5 @@ footer {
     display: flex;
     flex-direction: column;
     border-radius: 12px;
+    overflow: hidden;
 }
